# doomdepths-c

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-single-platform.yml
include/: battle.h  character.h  database.h  fight.h  input.h  item.h  map.h  menu.h  menus.h  monster.h  monsters.h  player.h  pretty-output.h  save.h  spell.h  spells.h  stuff.h  terminal.h
src/: battle.c  character.c  database.c  fight.c  input.c  item.c  main.c  map.c  menu.c  menus.c  monster.c  monsters.c  player.c  pretty-output.c  save.c  spell.c  spells.c  stuff.c  terminal.c
