cmake_minimum_required(VERSION 3.18)
project(DoomdepthsC VERSION 0.1.0 LANGUAGES C)
find_package(SQLite3 REQUIRED)
file(GLOB SOURCES  "src/*.c")
add_executable(DoomdepthsC ${SOURCES})
target_include_directories(DoomdepthsC PRIVATE include)
target_link_libraries(DoomdepthsC PRIVATE ${SQLite3_LIBRARIES})